// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recordToDom should create a value with formatting 1`] = `
<body>
  <em>
    test
  </em>
  
</body>
`;

exports[`recordToDom should create a value with formatting for split tags 1`] = `
<body>
  <em>
    test
  </em>
  
</body>
`;

exports[`recordToDom should create a value with formatting with attributes 1`] = `
<body>
  <a
    href="#"
  >
    test
  </a>
  
</body>
`;

exports[`recordToDom should create a value with image object 1`] = `
<body>
  <img
    src=""
  />
  
</body>
`;

exports[`recordToDom should create a value with image object and formatting 1`] = `
<body>
  <em>
    <img
      src=""
    />
    
  </em>
  
</body>
`;

exports[`recordToDom should create a value with image object and text after 1`] = `
<body>
  <em>
    <img
      src=""
    />
    te
  </em>
  st
</body>
`;

exports[`recordToDom should create a value with image object and text before 1`] = `
<body>
  te
  <em>
    st
    <img
      src=""
    />
    
  </em>
  
</body>
`;

exports[`recordToDom should create a value with nested formatting 1`] = `
<body>
  <em>
    <strong>
      test
    </strong>
  </em>
  
</body>
`;

exports[`recordToDom should create a value without formatting 1`] = `
<body>
  test
</body>
`;

exports[`recordToDom should create an empty value 1`] = `
<body>
  
  <br />
</body>
`;

exports[`recordToDom should create an empty value from empty tags 1`] = `
<body>
  
  <br />
</body>
`;

exports[`recordToDom should filter format attributes with settings 1`] = `
<body>
  <strong>
    test
  </strong>
  
</body>
`;

exports[`recordToDom should filter text at end with settings 1`] = `
<body>
  test
</body>
`;

exports[`recordToDom should filter text in format with settings 1`] = `
<body>
  <em>
    test
  </em>
  
</body>
`;

exports[`recordToDom should filter text outside format with settings 1`] = `
<body>
  <em>
    test
  </em>
  
</body>
`;

exports[`recordToDom should filter text with settings 1`] = `
<body>
  
  <br />
</body>
`;

exports[`recordToDom should handle br 1`] = `
<body>
  
  <br />
  
</body>
`;

exports[`recordToDom should handle br with formatting 1`] = `
<body>
  <em>
    
    <br />
    
  </em>
  
</body>
`;

exports[`recordToDom should handle br with text 1`] = `
<body>
  te
  <br />
  st
</body>
`;

exports[`recordToDom should handle double br 1`] = `
<body>
  a
  <br />
  
  <br />
  b
</body>
`;

exports[`recordToDom should handle empty list value 1`] = `
<body>
  <li>
    
    <br />
  </li>
</body>
`;

exports[`recordToDom should handle empty multiline value 1`] = `
<body>
  <p>
    
    <br />
  </p>
</body>
`;

exports[`recordToDom should handle middle empty list value 1`] = `
<body>
  <li>
    
    <br />
  </li>
  <li>
    
    <br />
  </li>
  <li>
    
    <br />
  </li>
</body>
`;

exports[`recordToDom should handle multiline list value 1`] = `
<body>
  <li>
    one
    <ul>
      <li>
        a
      </li>
      <li>
        b
        <ol>
          <li>
            1
          </li>
          <li>
            2
          </li>
        </ol>
      </li>
    </ul>
  </li>
  <li>
    three
  </li>
</body>
`;

exports[`recordToDom should handle multiline value 1`] = `
<body>
  <p>
    one
  </p>
  <p>
    two
  </p>
</body>
`;

exports[`recordToDom should handle multiline value with element selection 1`] = `
<body>
  <li>
    one
  </li>
</body>
`;

exports[`recordToDom should handle multiline value with empty 1`] = `
<body>
  <p>
    one
  </p>
  <p>
    
    <br />
  </p>
</body>
`;

exports[`recordToDom should handle nested empty list value 1`] = `
<body>
  <li>
    <br />
    <ul>
      <li>
        
        <br />
      </li>
    </ul>
  </li>
</body>
`;

exports[`recordToDom should handle selection before br 1`] = `
<body>
  a
  <br />
  
  <br />
  b
</body>
`;

exports[`recordToDom should ignore formats at line separator 1`] = `
<body>
  <p>
    <em>
      one
    </em>
  </p>
  <p>
    <em>
      two
    </em>
    
  </p>
</body>
`;

exports[`recordToDom should preserve emoji 1`] = `
<body>
  🍒
</body>
`;

exports[`recordToDom should preserve emoji in formatting 1`] = `
<body>
  <em>
    🍒
  </em>
  
</body>
`;

exports[`recordToDom should preserve non breaking space 1`] = `
<body>
  test  test
</body>
`;

exports[`recordToDom should remove br with settings 1`] = `
<body>
  
  <br />
</body>
`;

exports[`recordToDom should remove with children with settings 1`] = `
<body>
  two
</body>
`;

exports[`recordToDom should remove with settings 1`] = `
<body>
  
  <br />
</body>
`;

exports[`recordToDom should replace characters to format HTML with space 1`] = `
<body>
   
</body>
`;

exports[`recordToDom should unwrap with settings 1`] = `
<body>
  te
  <em>
    st
  </em>
  
</body>
`;
